@@ -1,7 +1,9 @@
 2007-03-27 Ian Rutt
  * Fixed bug with make_restarts.py so that output line-length is kept
    reasonable - build with gfortran fails otherwise.
-
+ * Branched to RELEASE_1_0_0_ANOMALY
+ * Began assembling code for anomaly coupling - added glimmer_anomcouple.F90
+	
 2007-03-16 Ian Rutt
  * Fixed problem specifying sigma levels - all three methods work now
 
